--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <link rel="shortcut icon" href="http://www.haoshiyou.org/assets/res/icon.png">
-<link rel="stylesheet" href="/umi.css">
+<link rel="stylesheet" href="/client-react-io/umi.css">
 </head>
 <body>
 <div id="root"></div>
-<script src="/umi.js"></script>
+<script src="/client-react-io/umi.js"></script>
 
 </body></html>
